--- a/css/default.css
+++ b/css/default.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700,800,900");
-@import url("../../font/pretendard.css");
-@import url("../../font/remixicon.css");
-@import url("../../font/dingbat_xeicon.css");
-@import url("../../font/webfonts_Yydimibang.css");
+@import url("../font/pretendard.css");
+@import url("../font/remixicon.css");
+@import url("../font/dingbat_xeicon.css");
+@import url("../font/webfonts_Yydimibang.css");
 /*-------------------------------------------------
 title       : 초기화
 Author      : 플랜아이 광주
